updated to new legio specification